# E5a_ISE_C_ssl_secure_connection

./: CMakeLists.txt  README.md  readme.md
C/: CMakeLists.txt
C/src/: main.d
C/src/connexion/: connexion.c
C/src/example_code/: example_code.c
C/src/trace/: trace.h
certificates/: client.pem  key.pem  server_key.pem
src/: conf.c  main.c
src/com/com/: com.c  com.h
src/com/connexion/: connexion.c  connexion.h
src/com/protocole/: protocole.c  protocole.h
src/connexion/: connexion.h
src/example_code/: example_code.h
